# ranker-service

./: Cargo.toml  README.md
.github/workflows/: rust.yml
glicko2/: algo.rs
src/: main.rs  scheduler.rs
src/elo/: algo.rs
src/glicko2/: algo.rs
