[package]
name = "ranker-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
dashmap = "5.4.0"
ntest = "0.9.0"
priority-queue = "1.3.1"
rand = "0.8.5"
serde = {version = "1.0.153", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.24", features = ["full"] }

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
